syntax = "proto3";

package gosionsvc.external.workflow;

import "konekko.me/gosion/commons/dto/commons.proto";

service Form {

    rpc CreatePlaceholder (CreatePlaceholderRequest) returns (CreatePlaceholderResponse);

    rpc DeletePlaceholder (DeletePlaceholderRequest) returns (DeletePlaceholderResponse);

    rpc UpdatePlaceholder (UpdatePlaceholderRequest) returns (UpdatePlaceholderResponse);

    rpc AddField (AddFieldRequest) returns (AddFieldResponse);

    rpc RemoveField (RemoveFieldRequest) returns (RemoveFieldResponse);

    rpc UpdateFieldProps (UpdateFieldPropsRequest) returns (UpdateFieldPropsResponse);

    rpc GetAllTypeFields (GetAllTypeFieldsRequest) returns (GetAllTypeFieldsResponse);

    //检查form的filed value是否符合
    rpc CheckFiledValue (CheckFiledValueRequest) returns (CheckFieldValueResponse);

    rpc Search(SearchRequest) returns (SearchResponse);
}


message SearchRequest {
    string value = 1;
    string key = 2;
    int64 page = 3;
    int64 size = 4;
}

message SearchResponse {
    gs.commons.dto.State state = 1;
}

message CheckFiledValueRequest {

}

message CheckFieldValueResponse {

}

message GetAllTypeFieldsRequest {

}

message GetAllTypeFieldsResponse {
    gs.commons.dto.State state = 1;
}

message CreatePlaceholderRequest {
    string key = 1;
    string name = 2;
    string desc = 3;
}

message CreatePlaceholderResponse {
    gs.commons.dto.State state = 1;
    string id = 2;
}

message DeletePlaceholderRequest {
    string id = 1;
}

message DeletePlaceholderResponse {
    gs.commons.dto.State state = 1;
}

message UpdatePlaceholderRequest {
    string id = 1;
    string name = 2;
    string desc = 3;
    string key = 4;
}

message UpdatePlaceholderResponse {
    gs.commons.dto.State state = 1;
}

message AddFieldRequest {
    string name = 1;
    string desc = 2;
    string label = 3;
    int64 type = 4;
}

message AddFieldResponse {
    gs.commons.dto.State state = 1;
}

message RemoveFieldRequest {
    string phId = 1;
    string fieldId = 2;
}

message RemoveFieldResponse {
    gs.commons.dto.State state = 1;
}

message UpdateFieldPropsRequest {
    string phId = 1;
    string fieldId = 2;
}

message UpdateFieldPropsResponse {
    gs.commons.dto.State state = 1;
}